--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "MongoDB": {
+    "ConnectionString": "mongodb://admin:adminpassword@localhost:27017",
+    "DatabaseName": "KosyncDb",
+    "CollectionName": "KosyncUsers"
   }
 }
