--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,8 +2,8 @@ name: Create and publish a Docker image
 
 on:
   push:
-    tags:
-      - 'v*.*.*'
+    branches:
+      - main
 
 env:
   REGISTRY: ghcr.io
