throw if not admin

--- a/src/appsettings.Development.json
+++ b/src/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "MongoDB": {
-    "ConnectionString": "mongodb://admin:adminpassword@localhost:27017",
+    "ConnectionString": "mongodb://admin:adminpassword@localhost:27017"
   }
 }
