--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -6,8 +6,12 @@
     }
   },
   "AllowedHosts": "*",
+  "DatabaseProvider": "SQLite",
   "MongoDB": {
     "DatabaseName": "KosyncDb",
     "CollectionName": "KosyncUsers"
+  },
+  "SQLite": {
+    "ConnectionString": "Data Source=kosync.db"
   }
 }
