--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -4,8 +4,12 @@
     <CentralPackageTransitivePinningEnabled>false</CentralPackageTransitivePinningEnabled>
   </PropertyGroup>
   <ItemGroup>
+    <PackageVersion Include="Dapper" Version="2.1.66" />
     <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.7" />
+    <PackageVersion Include="Microsoft.Data.Sqlite" Version="9.0.7" />
     <PackageVersion Include="MongoDB.Driver" Version="3.4.0" />
     <PackageVersion Include="Scalar.AspNetCore" Version="2.5.6" />
+    <PackageVersion Include="SqlKata" Version="3.0.0" />
+    <PackageVersion Include="SqlKata.Execution" Version="3.0.0" />
   </ItemGroup>
 </Project>
