--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -7,5 +7,6 @@
     <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.7" />
     <PackageVersion Include="MongoDB.Driver" Version="3.4.0" />
     <PackageVersion Include="Scalar.AspNetCore" Version="2.5.6" />
+    <PackageVersion Include="CSharpier.MsBuild" Version="1.0.3" />
   </ItemGroup>
 </Project>
